Added New Image

--- a/Leafscape/styles.css
+++ b/Leafscape/styles.css
@@ -129,10 +129,10 @@ body {
   width: 100%;
   max-width: 600px;
   height: auto;
-  transform: scale(1.2);
   object-fit: contain;
   filter: drop-shadow(10px 10px 20px rgba(0, 0, 0, 0.3));
-
+  mix-blend-mode: multiply;
+  border: 10px solid #FFFFFF;
 }
 
 /* Responsive Design */
